[package]
name = "bevy-ui-builders"
version = "0.3.0"
edition = "2021"
authors = ["Noah Sabaj <noahsabaj@gmail.com>"]
description = "Declarative UI builders for Bevy with consistent styling and interaction handling"
documentation = "https://docs.rs/bevy-ui-builders"
repository = "https://github.com/noahsabaj/bevy-ui-builders"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "ui", "builder", "gamedev", "gui"]
categories = ["game-development", "gui"]
readme = "README.md"

[dependencies]
bevy-plugin-builder = "0.2.0"
bevy = { version = "0.17", default-features = false, features = [
    "bevy_ui",
    "bevy_text",
    "bevy_sprite",
    "bevy_color",
    "bevy_picking",
    "bevy_log",
    "default_font"
] }

# Clipboard support (optional, not available on WASM)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
arboard = { version = "3.4", optional = true }

[dev-dependencies]
bevy = "0.17"

[features]
default = ["all_builders", "clipboard"]

# Native clipboard support (Ctrl+C/V/X in text inputs)
# Automatically disabled on WASM targets via target-specific dependency
clipboard = ["dep:arboard"]

all_builders = ["button", "slider", "dialog", "text_input", "panel", "form", "progress", "label", "separator", "checkbox", "number_input", "dropdown", "tooltip", "tabs", "toast", "context_menu"]
button = []
slider = []
dialog = []
text_input = []
panel = []
form = []
progress = []
label = []
separator = []
checkbox = []
number_input = ["text_input"]
dropdown = []
tooltip = []
tabs = []
toast = []
context_menu = []
cleanup = []

# Game UI features (separate from all_builders)
game_ui = ["inventory", "resource_bar", "minimap", "dialogue"]
inventory = []
resource_bar = []
minimap = []
dialogue = []

[[example]]
name = "button_showcase"
required-features = ["button"]

[[example]]
name = "dialog_examples"
required-features = ["dialog"]

[[example]]
name = "slider_demo"
required-features = ["slider"]

[[example]]
name = "text_input_demo"
required-features = ["text_input"]

[[example]]
name = "form_complete"
required-features = ["form", "button", "text_input", "slider", "checkbox", "number_input", "dropdown"]

[[example]]
name = "progress_bars"
required-features = ["progress"]

[[example]]
name = "panel_layouts"
required-features = ["panel"]

[[example]]
name = "labels_and_separators"
required-features = ["label", "separator"]

[[example]]
name = "kitchen_sink"
required-features = ["all_builders"]